fix pug and sass - p1

--- a/pages/watch/index.pug
+++ b/pages/watch/index.pug
@@ -1,9 +1,5 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Image Gallery
-        link(rel="stylesheet", href="styles/css/main.css")
-    body 
-        h1 hi
+- var headArgs = ["4 pages of responsive image galleries", "Image Gallery XD", "index"]
+include ../includes/head
++head(headArgs[0], headArgs[1], headArgs[2])
+
+body 
