fix pug and sass - p2

--- a/pages/watch/index.pug
+++ b/pages/watch/index.pug
@@ -1,5 +1,15 @@
-- var headArgs = ["4 pages of responsive image galleries", "Image Gallery XD", "index"]
+//- includes
 include ../includes/head
+
+
+//- vars
+- var headArgs = ["3 pages of responsive image galleries", "Image Gallery", "index"]
+
+
+//- <head>
 +head(headArgs[0], headArgs[1], headArgs[2])
 
+
+//- <body>
 body 
+    h2 supposedly a group of 3 links
