--- a/styles/css/cols.css
+++ b/styles/css/cols.css
@@ -1,2 +1,2 @@
-section{width:100%;padding:20px;-webkit-columns:300px 4;columns:300px 4;-webkit-column-gap:20px;column-gap:20px}section figure{display:inline-block;width:100%;padding-top:20px}
+import section{width:100%;padding:20px;-webkit-columns:300px 4;columns:300px 4;-webkit-column-gap:20px;column-gap:20px}import section figure{display:inline-block;width:100%;padding-top:20px}
 /*# sourceMappingURL=cols.css.map */
