--- a/pages/watch/flex.pug
+++ b/pages/watch/flex.pug
@@ -4,14 +4,20 @@ include ../includes/img-section
 
 
 //- vars
-- var headArgs = ["Responsive Flexbox Image Gallery", "Flexbox - img gallery", "flex"]
+-
+  var headArgs = [
+        "Responsive Flexbox Image Gallery",
+        "Flexbox - img gallery",
+        "flex",
+        "https://wallpaperaccess.com"
+    ]
 
 
 //- <head>
-+head(headArgs[0], headArgs[1], headArgs[2])
++head(headArgs[0], headArgs[1], headArgs[2], headArgs[3], headArgs[3])
 
 
 //- <body>
 body 
     section 
-        +alikeImages()
+        +wallpaperImg()
