--- a/pages/watch/grid.pug
+++ b/pages/watch/grid.pug
@@ -4,14 +4,20 @@ include ../includes/img-section
 
 
 //- vars
-- var headArgs = ["Responsive Grid Image Gallery", "Grid - img gallery", "grid"]
+-
+  var headArgs = [
+        "Responsive Grid Image Gallery",
+        "Grid - img gallery",
+        "grid",
+        "https://wallpaperaccess.com"
+    ]
 
 
 //- <head>
-+head(headArgs[0], headArgs[1], headArgs[2])
++head(headArgs[0], headArgs[1], headArgs[2], headArgs[3], headArgs[3])
 
 
 //- <body>
 body 
     section 
-        +alikeImages()
+        +wallpaperImg()
