--- a/styles/css/cols.css
+++ b/styles/css/cols.css
@@ -1,2 +1,2 @@
-import section{width:100%;padding:20px;-webkit-columns:300px 4;columns:300px 4;-webkit-column-gap:20px;column-gap:20px}import section figure{display:inline-block;width:100%;padding-top:20px}
+:root{--blk-clr:#202124}*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}body{background:var(--blk-clr);width:98vw;color:white;font-family:Arial, Helvetica, sans-serif}img{max-width:100%;height:100%;-o-object-fit:cover;object-fit:cover}section{width:100%;padding:20px;-webkit-columns:300px 4;columns:300px 4;-webkit-column-gap:20px;column-gap:20px}section figure{display:inline-block;width:100%;padding-top:20px}
 /*# sourceMappingURL=cols.css.map */
