--- a/styles/css/grid.css
+++ b/styles/css/grid.css
@@ -1,2 +1,2 @@
-section{width:100%;padding:20px;display:-ms-grid;display:grid;-ms-grid-columns:(minmax(200px, 1fr))[auto-fill];grid-template-columns:repeat(auto-fill, minmax(200px, 1fr));gap:40px}
+:root{--blk-clr:#202124}*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}body{background:var(--blk-clr);width:98vw;color:white;font-family:Arial, Helvetica, sans-serif}img{max-width:100%;height:100%;-o-object-fit:cover;object-fit:cover}section{width:100%;padding:20px;display:-ms-grid;display:grid;-ms-grid-columns:(minmax(200px, 1fr))[auto-fill];grid-template-columns:repeat(auto-fill, minmax(200px, 1fr));gap:40px}
 /*# sourceMappingURL=grid.css.map */
