--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -13,6 +13,8 @@
 body {
     background: var(--blk-clr);
     width: 98vw;
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 // General Elements Styles
