finished for today

--- a/pages/watch/index.pug
+++ b/pages/watch/index.pug
@@ -18,5 +18,6 @@ include ../includes/head
 
 //- <body>
 body 
+    <br>
     each page in connectedPages
-        a(href=`./${page}.html`) 
+        a(href=`./${page}.html`) #{page} page #[<br><br>]
