--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,2 +1,2 @@
-:root{--blk-clr:#202124}*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}body{background:var(--blk-clr);width:98vw;color:white;font-family:Arial, Helvetica, sans-serif}img{max-width:100%;height:100%;-o-object-fit:cover;object-fit:cover}
+:root{--blk-clr:#202124}*{margin:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box}body{background:var(--blk-clr);width:98vw;color:white;font-family:Arial, Helvetica, sans-serif}img{max-width:100%;height:100%;-o-object-fit:cover;object-fit:cover}a{-webkit-text-decoration-color:aqua;text-decoration-color:aqua;color:#fff;padding:15px;font-size:1.3em;-webkit-transition:all 0.5s ease-out;transition:all 0.5s ease-out}a:hover{color:aqua}
 /*# sourceMappingURL=index.css.map */
